--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
 install:
   - pip install .
-  - pip install -r requirements
+  - pip install -r requirements.txt
 script: make test
