--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,3 +1,3 @@
 # PyTest configuration file
 [pytest]
-addopts =  --cov-config tests/.coveragerc --cov=. --cov-report html:/tmp/differ_coverage
+addopts =  --cov-config tests/.coveragerc --cov=. --cov-report html:/tmp/differ_coverage  --doctest-modules --cov-report term-missing
